# img2ascii

./: Cargo.toml  LICENSE  readme.md
src/: main.rs
src/filters/: ascii.rs  edge_detect.rs  gaussian.rs  mod.rs  sobel.rs
src/ui/: app.rs  ui.rs  utils.rs
