[package]
name = "ImageToAscii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.25.0"
ab_glyph = "0.2.28"
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["image", "file"] }
egui-notify = "0.15.0"
image = {version = "0.25.2", features = ["png", "jpeg"]}
rfd = "0.15.0"